<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="5dp"
    android:orientation="vertical"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_span="3"
            android:layout_height="wrap_content" android:padding="2dp"  >

            <TableLayout
                android:id="@+id/MainLayoutTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </TableLayout>

        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btnMainView"
            android:textColor="#FFFFFF"
		    android:background="@drawable/custombutton"
		    android:layout_width="85dp"
		    android:layout_height="40dp"
		    android:layout_margin="2dp"
            android:text="@string/mainView" />

        <Button
            android:id="@+id/btnEditMessageView"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:layout_margin="2dp"
            android:background="@drawable/custombutton"
            android:text="@string/createMessage"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnViewPeople"
            android:textColor="#FFFFFF"
		    android:background="@drawable/custombutton"
		    android:layout_width="85dp"
		    android:layout_height="40dp"
		    android:layout_margin="2dp"
            android:text="@string/viewPeople" />
    </TableRow>

</TableLayout>